Replace Int with Int32 to represent row and column size of matrics.
Signed-off-by: HE, Tao <sighingnow@gmail.com>

--- a/math-foreign/math-foreign.cabal
+++ b/math-foreign/math-foreign.cabal
@@ -15,7 +15,7 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Math.Complex
-    -- Math.Linear.Linalg
+    Math.Linear.Linalg
     Math.Linear.Matrix
     Math.Linear.Matrix.Mutable
   other-modules:
