--- a/math-foreign/math-foreign.cabal
+++ b/math-foreign/math-foreign.cabal
@@ -18,6 +18,8 @@ library
     Math.Linear.Linalg
     Math.Linear.Matrix
     Math.Linear.Matrix.Mutable
+    Math.Numeric.Random
+    Math.Numeric.Special
   other-modules:
     Math.Linear.Internal
   default-language:    Haskell2010
@@ -26,6 +28,8 @@ library
   build-depends:       base >= 4.7 && < 5
                      , foundation
   c-sources:           cbits/linear.c
+                     , cbits/pcg_basic.c
+                     , cbits/pcg_random.c
   include-dirs:        cbits/include/
   cc-options:          -DDEBUG
   extra-libraries:	   openblas, lapacke
