Make the example compilable based on the intuition plugin.
Signed-off-by: HE, Tao <sighingnow@gmail.com>

--- a/math-foreign/math-foreign.cabal
+++ b/math-foreign/math-foreign.cabal
@@ -47,4 +47,6 @@ executable math-foreign
                      , OverloadedStrings
   build-depends:       base >= 4.7 && < 5
                      , foundation
+                     , intuition-plugin
+                     , ghc-typelits-knownnat
                      , math-foreign
