Better design for element-wise operations.
Signed-off-by: HE, Tao <sighingnow@gmail.com>

--- a/math-foreign/math-foreign.cabal
+++ b/math-foreign/math-foreign.cabal
@@ -20,6 +20,7 @@ library
     Math.Linear.Matrix.Naive
     Math.Linear.Matrix.Mutable
     Math.Linear.Matrix.Mutable.Naive
+    Math.Linear.ElemWise
     Math.Linear.Linalg
     Math.Linear.Linalg.Naive
     Math.Numeric.Random
