--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -24,6 +24,7 @@ library
                      , OverloadedStrings
   build-depends:       base >= 4.7 && < 5
                      , foundation
+  extra-libraries:     primesieve
 
 executable prime-count
   hs-source-dirs:      example
