--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -24,7 +24,7 @@ library
                      , OverloadedStrings
   build-depends:       base >= 4.7 && < 5
                      , foundation
-  extra-libraries:     primesieve, libstdc++
+  extra-libraries:     primesieve, stdc++
 
 executable prime-count
   hs-source-dirs:      example
