--- a/stack.yaml
+++ b/stack.yaml
@@ -2,12 +2,12 @@ flags: {}
 extra-package-dbs: []
 packages:
 # - algo
-# - primesieve
-- intuition-plugin
-- stat-ml
-- math-foreign
-- xgboost-haskell
-- opt-solver
+- primesieve
+# - intuition-plugin
+# - stat-ml
+# - math-foreign
+# - xgboost-haskell
+# - opt-solver
 extra-deps:
 - z3-4.1.1
-resolver: nightly-2017-10-11
+resolver: lts-22.13
