--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -23,6 +23,7 @@ library
   default-extensions:  NoImplicitPrelude
                      , OverloadedStrings
   build-depends:       base >= 4.7 && < 5
+                     , basement
                      , foundation
   extra-libraries:     primesieve, stdc++
 
