--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -20,29 +20,24 @@ library
   other-modules:
     Math.Prime.FastSieve.FFI
   default-language:    Haskell2010
-  default-extensions:  NoImplicitPrelude
-                     , OverloadedStrings
+  default-extensions:  OverloadedStrings
   build-depends:       base >= 4.7 && < 5
-                     , basement
-                     , foundation
-  extra-libraries:     primesieve, stdc++
+                     , vector
+  extra-libraries:     primesieve
 
 executable prime-count
   hs-source-dirs:      example
   main-is:             Count.hs
   default-language:    Haskell2010
-  default-extensions:  NoImplicitPrelude
-                     , OverloadedStrings
+  default-extensions:  OverloadedStrings
   build-depends:       base >= 4.7 && < 5
-                     , foundation
                      , primesieve
 
 executable prime-example
   hs-source-dirs:      example
   main-is:             Main.hs
   default-language:    Haskell2010
-  default-extensions:  NoImplicitPrelude
-                     , OverloadedStrings
+  default-extensions:  OverloadedStrings
   build-depends:       base >= 4.7 && < 5
-                     , foundation
                      , primesieve
+                     , vector
