Add functions from primesieve/iterator.h
The primesieve C API has another header primesieve/iterator.h that has
functions for generating prime numbers through an iterator interface. We
import these functions into the Haskell library, and use them to create
functions 'primes', 'primesTo', 'primesFrom', 'primesFromTo' that lazily
generate lists of primes.

--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -15,6 +15,8 @@ extra-source-files:  README.md
 
 library
   hs-source-dirs:      src
+  c-sources:
+    cbits/primesieve_iterator_size.c
   exposed-modules:
     Math.Prime.FastSieve
   other-modules:
