--- a/primesieve/primesieve.cabal
+++ b/primesieve/primesieve.cabal
@@ -13,6 +13,11 @@ license:             MIT
 license-file:        LICENSE
 extra-source-files:  README.md
 
+tested-with:
+    GHC == 9.6.5
+  , GHC == 9.8.2
+  , GHC == 9.10.1
+
 library
   hs-source-dirs:      src
   c-sources:
